tests/codegen/fail/interface/trait/missing_field_argument.stderr
error[E0080]: evaluation of constant value failed
  --> fail/interface/trait/missing_field_argument.rs:16:8
   |
16 |     fn id(&self, is_present: bool) -> &str;
   |        ^^ the evaluated program panicked at 'Failed to implement interface `Character` on `ObjA`: Field `id`: Argument `isPresent` of type `Boolean!` was expected, but not found.', $DIR/fail/interface/trait/missing_field_argument.rs:16:8
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `::juniper::assert_field` (in Nightly builds, run with -Z macro-backtrace for more info)
